--- a/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
@@ -32,6 +32,7 @@
                     <h:outputText value="#{item.type.getNameByLanguage(SpracheForm.locale)}"/>
                     <!--TODO Buttons should to bee aligned right-->
                     <p:commandButton icon="ui-icon-pencil"
+                                     style="float: right"
                                      update="tabView:dialogEditDocStrucTypeForm:docStructTypeSelection"
                                      title="#{msgs.docstructTypeAendern}"
                                      onclick="PF('dialogEditDocStrucType').show();">
