--- a/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
@@ -21,26 +21,26 @@
 
     <p:growl id="growl" showDetail="true"/>
 
-    <h:form id="buttons">
-        <p:blockUI block="buttons,tabView" trigger="saveBtn,saveAndBackBtn"/>
-        <div align="right">
-            <p:button value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" disabled="true"/>
-            <p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle" icon="ui-icon-close"/>
-            <p:commandButton id="saveBtn" value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}"
-                             icon="ui-icon-disk"
-                             update="growl"/>
-            <p:commandButton id="saveAndBackBtn" value="#{msgs.speichernZurueck}"
-                             action="#{Metadaten.saveMetadataToXmlAndGoToProcessPage}"
-                             icon="ui-icon-extlink" update="growl"/>
-        </div>
-    </h:form>
+    <!--<h:form id="buttons">-->
+        <!--<p:blockUI block="buttons,tabView" trigger="saveBtn,saveAndBackBtn"/>-->
+        <!--<div align="right">-->
+            <!--<p:button value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" disabled="true"/>-->
+            <!--<p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle" icon="ui-icon-close"/>-->
+            <!--<p:commandButton id="saveBtn" value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}"-->
+                             <!--icon="ui-icon-disk"-->
+                             <!--update="growl"/>-->
+            <!--<p:commandButton id="saveAndBackBtn" value="#{msgs.speichernZurueck}"-->
+                             <!--action="#{Metadaten.saveMetadataToXmlAndGoToProcessPage}"-->
+                             <!--icon="ui-icon-extlink" update="growl"/>-->
+        <!--</div>-->
+    <!--</h:form>-->
 
-    <p:tabView id="tabView">
-        <p:tab title="#{msgs.strukturdaten}">
-            <ui:include src="structureData.xhtml"/>
-        </p:tab>
+    <p:tabView id="tabView" style="height: 99%">
         <p:tab title="#{msgs.paginierung}">
             <ui:include src="pagination.xhtml"/>
+        </p:tab>
+        <p:tab title="#{msgs.strukturdaten}">
+            <ui:include src="structureData.xhtml"/>
         </p:tab>
         <p:tab title="#{msgs.metadata}">
             <ui:include src="metadata.xhtml"/>
